# edge_detection_assignment

./: .gitignore  CMakeLists.txt  README.md
app/: app.gradle  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedetection/: MainActivity.kt
gl/: GLRenderer.kt
jni/: CMakeLists.txt  native-lib.cpp
web/: package.json
web/public/: index.html
web/src/: index.ts
